--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -312,8 +312,11 @@
                     <li class="anchor">Common Events</li>
                     <li id="event_touchstart">Touchstart me!</li>
                     <li id="event_touchend">Touchend me!</li>
+                    <li id="event_touchmove">Touchmove me!</li>
+                    <li class="anchor">Tap Events</li>
                     <li id="event_tap">Tap me!</li>
                     <li id="event_doubletap">Double-Tap me!</li>
+                    <li id="event_longtap">Long-Tap me!</li>
                     <li class="anchor">Special Events</li>
                     <li id="swipe" data-icon="user">
                         Swipe me!
@@ -590,15 +593,14 @@
 
 
     <!-- Third parties dependencies -->
-    <script src="../../src/lib/zepto.js"></script>
+    <script src="../../src/lib/QuoJS.js"></script>
     <script src="../../src/lib/iscroll-lite.js"></script>
 
     <!-- LungoJS Libraries (Development mode)-->
     <script src="../../src/Lungo.js"></script>
     <script src="../../src/Lungo.App.js" ></script>
-    <script src="../../src/Lungo.Environment.js" ></script>
     <script src="../../src/Lungo.Core.js"></script>
-    <script src="../../src/Lungo.Events.js"></script>
+    <script src="../../src/Lungo.Dom.js"></script>
     <script src="../../src/Lungo.Service.js"></script>
     <script src="../../src/router/Lungo.Router.js"></script>
     <script src="../../src/router/Lungo.Router.History.js" ></script>
@@ -610,13 +612,12 @@
     <script src="../../src/view/Lungo.View.Template.js"></script>
     <script src="../../src/view/Lungo.View.Template.Binding.js"></script>
     <script src="../../src/view/Lungo.View.Template.List.js"></script>
-    <script src="../../src/dom/Lungo.Dom.js"></script>
-    <script src="../../src/dom/Lungo.Dom.Event.js"></script>
     <script src="../../src/data/Lungo.Data.Cache.js"></script>
     <script src="../../src/data/Lungo.Data.Sql.js"></script>
     <script src="../../src/data/Lungo.Data.Storage.js"></script>
     <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
     <script src="../../src/boot/Lungo.Boot.js"></script>
+    <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Layout.js"></script>
     <script src="../../src/boot/Lungo.Boot.Events.js"></script>
     <script src="../../src/boot/Lungo.Boot.Data.js"></script>
