New repository of icons
with 70% less in size

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -53,21 +53,21 @@
 
     <section id="kitchen-sink">
         <header data-title="LungoJS Kitchen Sink">
-            <a href="#" class="button onleft aside" data-target="aside" data-icon="note"></a>
+            <a href="#" class="button onleft aside" data-target="aside" data-icon="items"></a>
         </header>
 
         <aside id="kitchen-sink-scroll" class="scrollable">
             <div>
                 <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
                 <a href="#authors" data-target="article" data-icon="group">Author & Contributors</a>
-                <a href="#navigation" data-target="section" data-icon="wifi">Navigation</a>
+                <a href="#navigation" data-target="section" data-icon="map">Navigation</a>
                 <a href="#buttons" data-target="article" data-icon="plus" data-count="14">Buttons & Colours</a>
                 <a href="#icons" data-target="article" data-icon="picture" data-count="94">Icons</a>
-                <a href="#data-attributes" data-target="article" data-icon="picture" data-count="6">Data Attributes</a>
-                <a href="#forms" data-target="article" data-icon="write" data-count="7">Form Elements</a>
-                <a href="#lists" data-target="section" data-icon="note" data-count="5">Lists</a>
+                <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6">Data Attributes</a>
+                <a href="#forms" data-target="article" data-icon="edit" data-count="7">Form Elements</a>
+                <a href="#lists" data-target="section" data-icon="items" data-count="5">Lists</a>
                 <a href="#events" data-target="article" data-icon="user">Events</a>
-                <a href="#scrolls" data-target="article" data-icon="points">Scrolls</a>
+                <a href="#scrolls" data-target="article" data-icon="down">Scrolls</a>
             </div>
         </aside>
 
@@ -140,8 +140,8 @@
                 <a href="#" class="button big magenta">magenta</a>
                 <a href="#" class="button big pink">pink</a>
                 <a href="#" class="button big yellow">yellow</a>
-                <a href="#" class="button big twitter" data-icon="twitter">twitter</a>
-                <a href="#" class="button big facebook" data-icon="facebook">facebook</a>
+                <a href="#" class="button big twitter">twitter</a>
+                <a href="#" class="button big facebook">facebook</a>
 
                 <div class="text">You can view other examples push in the next button</div>
 
@@ -157,103 +157,54 @@
                 <p class="text">In the listed examples you are seeing a attribute "data-icon", this attribute only need the semantic name of the icon you want to show and LungoJS will do the rest of the work.</p>
 
                 <ul>
-                    <li data-icon="anchor mini">anchor</li>
-                    <li data-icon="box mini">box</li>
-                    <li data-icon="cloudup mini">cloudup</li>
-                    <li data-icon="deny mini">deny</li>
-                    <li data-icon="storm mini">storm</li>
-                    <li data-icon="feed mini">feed</li>
-                    <li data-icon="group mini">group</li>
-                    <li data-icon="help mini">help</li>
-                    <li data-icon="info mini">info</li>
-                    <li data-icon="join mini">join</li>
-                    <li data-icon="heart mini">heart</li>
-                    <li data-icon="index mini">index</li>
-                    <li data-icon="music mini">music</li>
-                    <li data-icon="note mini">note</li>
-                    <li data-icon="folder mini">folder</li>
-                    <li data-icon="pencil mini">pencil</li>
-                    <li data-icon="chat mini">chat</li>
-                    <li data-icon="reset mini">reset</li>
-                    <li data-icon="search mini">search</li>
-                    <li data-icon="time mini">time</li>
-                    <li data-icon="u mini">u</li>
-                    <li data-icon="camera mini">camera</li>
-                    <li data-icon="message mini">message</li>
-                    <li data-icon="setting mini">setting</li>
-                    <li data-icon="config mini">config</li>
-                    <li data-icon="label mini">label</li>
-
-                    <li data-icon="link mini">link</li>
-                    <li data-icon="twitter mini">twitter</li>
-                    <li data-icon="cloud mini">cloud</li>
-                    <li data-icon="cancel mini">cancel</li>
-                    <li data-icon="view mini">view</li>
-                    <li data-icon="document mini">document</li>
-                    <li data-icon="earth mini">earth</li>
-                    <li data-icon="home mini">home</li>
-                    <li data-icon="inbox mini">inbox</li>
-                    <li data-icon="compact mini">compact</li>
-                    <li data-icon="key mini">key</li>
-                    <li data-icon="radar mini">radar</li>
-                    <li data-icon="mail mini">mail</li>
-                    <li data-icon="wallpaper mini">wallpaper</li>
-                    <li data-icon="suitcase mini">suitcase</li>
-                    <li data-icon="picture mini">picture</li>
-                    <li data-icon="on mini">on</li>
-                    <li data-icon="external mini">external</li>
-                    <li data-icon="star mini">star</li>
-                    <li data-icon="plane mini">plane</li>
-                    <li data-icon="user mini">user</li>
-                    <li data-icon="video mini">video</li>
-                    <li data-icon="write mini">write</li>
-                    <li data-icon="truck mini">truck</li>
-                    <li data-icon="graph mini">graph</li>
-                    <li data-icon="piechart mini">piechart</li>
-
-                    <li data-icon="expand mini">expand</li>
-                    <li data-icon="redo mini">redo</li>
-                    <li data-icon="accept mini">accept</li>
-                    <li data-icon="check mini">check</li>
-                    <li data-icon="play mini">play</li>
-                    <li data-icon="pause mini">pause</li>
-                    <li data-icon="stop mini">stop</li>
-                    <li data-icon="forward mini">forward</li>
-                    <li data-icon="backward mini">backward</li>
-                    <li data-icon="player mini">player</li>
-                    <li data-icon="refresh mini">refresh</li>
-                    <li data-icon="minus mini">minus</li>
-                    <li data-icon="battery mini">battery</li>
-                    <li data-icon="left mini">left</li>
-                    <li data-icon="right mini">right</li>
+                    <li data-icon="map mini">map</li>
+                    <li data-icon="clock mini">clock</li>
                     <li data-icon="calendar mini">calendar</li>
-                    <li data-icon="shuffle mini">shuffle</li>
-                    <li data-icon="wifi mini">wifi</li>
-                    <li data-icon="dashboard mini">dashboard</li>
-                    <li data-icon="points mini">points</li>
-                    <li data-icon="printer mini">printer</li>
-
-                    <li data-icon="download mini">download</li>
-                    <li data-icon="exclamation mini">exclamation</li>
+                    <li data-icon="message mini">message</li>
+                    <li data-icon="chat mini">chat</li>
+                    <li data-icon="user mini">user</li>
+                    <li data-icon="group mini">group</li>
+                    <li data-icon="loading mini">loading</li>
+                    <li data-icon="refresh mini">refresh</li>
+                    <li data-icon="search mini">search</li>
                     <li data-icon="pushpin mini">pushpin</li>
-                    <li data-icon="trash mini">trash</li>
-                    <li data-icon="cart mini">cart</li>
-                    <li data-icon="saving mini">saving</li>
-                    <li data-icon="flag mini">flag</li>
+                    <li data-icon="star mini">star</li>
+                    <li data-icon="heart mini">heart</li>
+                    <li data-icon="warning mini">warning</li>
                     <li data-icon="add mini">add</li>
-                    <li data-icon="multiply mini">multiply</li>
-                    <li data-icon="lock mini">lock</li>
-                    <li data-icon="unlock mini">unlock</li>
+                    <li data-icon="remove mini">remove</li>
+                    <li data-icon="question mini">question</li>
+                    <li data-icon="info mini">info</li>
+                    <li data-icon="check mini">check</li>
                     <li data-icon="substract mini">substract</li>
+                    <li data-icon="close mini">close</li>
                     <li data-icon="plus mini">plus</li>
                     <li data-icon="up mini">up</li>
                     <li data-icon="down mini">down</li>
-                    <li data-icon="viewport mini">viewport</li>
-                    <li data-icon="alarm mini">alarm</li>
-                    <li data-icon="quote mini">quote</li>
-                    <li data-icon="volume_down mini">volume_down</li>
-                    <li data-icon="volume_up mini">volume_up</li>
-                    <li data-icon="help mini">help</li>
+                    <li data-icon="left mini">left</li>
+                    <li data-icon="right mini">right</li>
+                    <li data-icon="home mini">home</li>
+                    <li data-icon="pencil mini">pencil</li>
+                    <li data-icon="edit mini">edit</li>
+                    <li data-icon="picture mini">picture</li>
+                    <li data-icon="camera mini">camera</li>
+                    <li data-icon="music mini">music</li>
+                    <li data-icon="wifi mini">wifi</li>
+                    <li data-icon="file mini">file</li>
+                    <li data-icon="files mini">files</li>
+                    <li data-icon="folder mini">folder</li>
+                    <li data-icon="key mini">key</li>
+                    <li data-icon="settings mini">settings</li>
+                    <li data-icon="chart mini">chart</li>
+                    <li data-icon="trash mini">trash</li>
+                    <li data-icon="target mini">target</li>
+                    <li data-icon="items mini">items</li>
+                    <li data-icon="download mini">download</li>
+                    <li data-icon="upload mini">upload</li>
+                    <li data-icon="basket mini">basket</li>
+                    <li data-icon="phone mini">phone</li>
+                    <li data-icon="mail mini">mail</li>
+                    <li data-icon="tag mini">tag</li>
                 </ul>
             </div>
         </article>
@@ -305,7 +256,7 @@
         <article id="forms" class="list scrollable">
             <div class="container indented">
                 <ul class="form">
-                    <li class="tip darker" data-icon="write mini">Example of inputs</li>
+                    <li class="tip darker" data-icon="edit mini">Example of inputs</li>
                     <li>
                         <label>type="text"</label>
                         <input type="text" placeholder="Input text"/>
@@ -317,15 +268,15 @@
                 </ul>
 
                 <ul>
-                    <li class="tip darker" data-icon="write mini">Example of search</li>
+                    <li class="tip darker" data-icon="edit mini">Example of search</li>
                     <li data-search="Type a search..."></li>
                     <li class="tip dark" data-icon="help mini">It's a special form element you must set the attribute data-search="Placeholder text"</li>
                 </ul>
 
                 <ul>
-                    <li class="tip darker" data-icon="write mini">Example of textarea</li>
+                    <li class="tip darker" data-icon="edit mini">Example of textarea</li>
                     <li><textarea placeholder="Textarea sample"></textarea></li>
-                    <li class="anchor" data-icon="write">Example of select</li>
+                    <li class="anchor" data-icon="edit">Example of select</li>
                     <li>
                         <label>Select a number:</label>
                         <label class="select">
@@ -340,7 +291,7 @@
                 </ul>
 
                 <ul>
-                    <li class="tip darker" data-icon="write mini">Example of checkbox</li>
+                    <li class="tip darker" data-icon="edit mini">Example of checkbox</li>
                     <li style="height: 32px;">
                         <label class="onleft" data-icon="twitter"></label>
                         <label class="checkbox onleft"><input type="checkbox" id="checkbox-0"/></label>
@@ -348,7 +299,7 @@
                 </ul>
 
                 <ul class="form">
-                    <li class="tip darker" data-icon="write mini">Example of radio</li>
+                    <li class="tip darker" data-icon="edit mini">Example of radio</li>
                     <li>
                         <label class="radio"><input type="radio" name="group-0" id="radio-0" checked="checked"/></label>
                         <label class="radio"><input type="radio" name="group-0" id="radio-1"/></label>
@@ -431,7 +382,7 @@
                 <a href="#nav-1" data-target="article" class="current" data-icon="user"></a>
                 <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17"></a>
                 <a href="#nav-3" data-target="article" data-icon="mail"></a>
-                <a href="#nav-4" data-target="article" data-icon="twitter"></a>
+                <a href="#nav-4" data-target="article" data-icon="phone"></a>
             </nav>
         </footer>
 
@@ -488,10 +439,10 @@
         <footer class="toolbar">
             <nav>
                 <a href="#list-plain" data-target="article" class="current" data-title="Normal List" data-icon="home"></a>
-                <a href="#list-ordered" data-target="article" data-title="Ordered List" data-icon="storm"></a>
-                <a href="#list-indented" data-target="article" data-title="Indented List" data-icon="stop"></a>
-                <a href="#list-rounded" data-target="article" data-title="Rounded List" data-icon="note"></a>
-                <a href="#list-grouped" data-target="article" data-title="Grouped List" data-icon="group"></a>
+                <a href="#list-ordered" data-target="article" data-title="Ordered List" data-icon="items"></a>
+                <a href="#list-indented" data-target="article" data-title="Indented List" data-icon="target"></a>
+                <a href="#list-rounded" data-target="article" data-title="Rounded List" data-icon="files"></a>
+                <a href="#list-grouped" data-target="article" data-title="Grouped List" data-icon="folder"></a>
             </nav>
         </footer>
 
